# snaprender-integrations

./: .gitignore  LICENSE  README.md
.github/workflows/: publish-n8n.yml
autogen/: README.md  autogen_studio_gallery.json  pyproject.toml  snaprender_autogen.py
autogen/autogen_ext_snaprender/: __init__.py
chatgpt-actions/: README.md  openapi.json
crewai/: README.md  pyproject.toml  snaprender_crewai.py
crewai/crewai_snaprender/: __init__.py
langchain/: README.md  pyproject.toml  snaprender_langchain.py
langchain-js/: README.md  package-lock.json  package.json  tsconfig.json
langchain-js/src/: index.ts
langchain/langchain_snaprender/: __init__.py
mcp-server/: Dockerfile  README.md  glama.json  package-lock.json  package.json  server.json
mcp-server/src/: index.ts
n8n/: README.md  package-lock.json  package.json  tsconfig.json
n8n/credentials/: SnapRenderApi.credentials.ts
n8n/nodes/SnapRender/: SnapRender.node.json  SnapRender.node.ts
openclaw/: README.md  SKILL.md
postman/: snaprender-postman-collection.json
